syntax = "proto3";

option go_package = "ms/gateway/pb";
package auth;
import "users.proto";
import "shared.proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Regist(RegistRequest) returns (RegistResponse);
    rpc ResetPassword(ResetPasswordRequest) returns (shared.EmptyBody);
    rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

// in case we want to add otp for the websocket
message LoginResponse {
    users.User user = 1;
    string sessionId = 2;
}

message RegistRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

// in case we want to add otp for the websocket
message RegistResponse {
    users.User user = 1;
    string sessionId = 2;
}

//message User {
//    int32 id = 1;
//    string firstName = 2;
//    string lastName = 3;
//    string email = 4;
//    string password = 5;
//    string mobileNumber = 6;
//    google.protobuf.Timestamp createdAt = 7;
//    google.protobuf.Timestamp updatedAt = 8;
//}


message ResetPasswordRequest {
    string oldPassword = 1;
    string newPassword = 2;
    string confirmNewPassword = 3;
    int32 id = 4;
}

message ValidateSessionRequest {
    string sessionId = 1;
}

message ValidateSessionResponse {
    string sessionId = 1;
    users.User user = 2;
}